finished network and part of ui
